# fficxx

./: .buildinfo  .travis.yml  HROOT-generate.cabal  HROOT.conf  LICENSE  README.md  build.conf  builddep.sh  compile  configure  env.nix  fficxx.cabal  flake.nix  genindex.html  getting_started.html  haddock  index.html  objects.inv  oop_model_in_fficxx.html  override.nix  real_world_usage.html  references.html  release.nix  search.html  searchindex.js  shell.nix  use.nix  versioncheck.hs  xsec.cabal
.github/workflows/: build.yml  docs.yml
_sources/: real_world_usage.md.txt
_static/: documentation_options.js
build-tools/: fficxx-build-tools.cabal
build-tools/app/: checkImports.hs
csrc/: MacroPatternMatch.h
docs/: conf.py  getting_started.md  index.rst  installation.md  oop_model_in_fficxx.md  references.md
examples/function/: Function.h  build.sh  hsMain.hs  result.cpp
examples/inherit/: Gen.hs  TH.hs  TH2.hs  app.hs
examples/map/: build.sh  maptest.cpp  test.hs
examples/proxy/: Gen.hs  TH.hs  TH2.hs  app.hs  cabal.project
examples/shared_ptr/: stub.cc  test.hs
examples/template-member/: Gen.hs  app.hs  build.sh  main.cpp
examples/unique_ptr/: test.hs
examples/vector/: TestTH.hs  test.hs
exe/: HROOT-generate.hs  fficxx.hs
experiment/: defaultparam.hs  test2.hs
experiments/: ghc-exactprint.hs  sample.hs
fficxx/: ChangeLog.md  LICENSE  default.nix  fficxx.cabal  shell.nix
fficxx-multipkg-test/: fficxx-multipkg-test.cabal  shell.nix
fficxx-multipkg-test/app/: Main.hs
fficxx-multipkg-test/template-dep/: Gen.hs  gen.nix
fficxx-multipkg-test/template-dep/template/: tdtest.cpp  tdtest.h  test.cpp  test.h
fficxx-multipkg-test/template-member/: Gen.hs  gen.nix  main.cpp
fficxx-multipkg-test/template-member/template/: tmftest.cpp
fficxx-multipkg-test/template-toplevel/: Gen.hs  gen.nix
fficxx-multipkg-test/template-toplevel/template/: tttest.cpp  tttest.h
fficxx-multipkg-test/test/: TemplateDepSpec.hs  TemplateMemberSpec.hs  TemplateTopLevelSpec.hs
fficxx-multipkg-test/tmpl-dup-inst/: tmpl-dup-inst.cabal
fficxx-multipkg-test/tmpl-dup-inst/src/Test/TemplateInstantiation/: A.hs  B.hs
fficxx-runtime/: ChangeLog.md  LICENSE  default.nix  fficxx-runtime.cabal
fficxx-runtime/csrc/: Function.h  MacroPatternMatch.h  cpp_magic.h
fficxx-runtime/lib/FFICXX/Runtime/: Cast.hs  TH.hs
fficxx-runtime/lib/FFICXX/Runtime/Function/: TH.hs  Template.hs
fficxx-runtime/src/FFICXX/Runtime/: Cast.hs  TH.hs  Types.hs
fficxx-runtime/src/FFICXX/Runtime/CodeGen/: C.hs  Cxx.hs
fficxx-runtime/src/FFICXX/Runtime/Function/: TH.hs  Template.hs
fficxx-test/: fficxx-test.cabal  shell.nix
fficxx-test/app/: Main.hs
fficxx-test/test/: FunctionSpec.hs  MapSpec.hs  PairSpec.hs  SharedPtrSpec.hs  UniquePtrSpec.hs  VectorSpec.hs
fficxx/app/: test.hs
fficxx/app/ghc-source-gen-test/: Main.hs
fficxx/lib/FFICXX/Generate/: Builder.hs  Config.hs  ContentMaker.hs  Dependency.hs  Name.hs  Util.hs
fficxx/lib/FFICXX/Generate/Code/: Cabal.hs  Cpp.hs  Dependency.hs  HsCast.hs  HsFFI.hs  HsFrontEnd.hs  HsTemplate.hs  MethodDef.hs  Primitive.hs
fficxx/lib/FFICXX/Generate/Generator/: ContentMaker.hs  Driver.hs
fficxx/lib/FFICXX/Generate/QQ/: Verbatim.hs
fficxx/lib/FFICXX/Generate/Type/: Cabal.hs  Class.hs  Config.hs  Module.hs  PackageInterface.hs
fficxx/lib/FFICXX/Generate/Util/: HaskellSrcExts.hs  TH.hs
fficxx/sample/STL-generator/: Foo.h  STLGen.hs  stub.cc  test.hs
fficxx/sample/cxxlib/: Makefile
fficxx/sample/mysample-generator/: MySampleGen.hs  build.sh
fficxx/sample/qt-generator/: QtGen.hs  testqt.hs
fficxx/sample/snappy-generator/: SnappyGen.hs  testSnappy.hs
fficxx/sample/template-test/stl/: STL.hs  stub.cc  template.hh  test.hs
fficxx/sample/template-test/stl/STL/: TH.hs  Template.hs
fficxx/src/FFICXX/Generate/: Builder.hs  Config.hs  ContentMaker.hs  Dependency.hs  Name.hs  Util.hs
fficxx/src/FFICXX/Generate/Code/: Cabal.hs  Cpp.hs  HsCast.hs  HsCommon.hs  HsEnum.hs  HsFFI.hs  HsFrontEnd.hs  HsImplementation.hs  HsInterface.hs  HsProxy.hs  HsRawType.hs  HsTH.hs  HsTemplate.hs  HsTopLevel.hs  Primitive.hs
fficxx/src/FFICXX/Generate/Dependency/: Graph.hs  Internal.hs
fficxx/src/FFICXX/Generate/IDL/: Parser.hs  Translate.hs  Type.hs
fficxx/src/FFICXX/Generate/QQ/: Verbatim.hs
fficxx/src/FFICXX/Generate/Type/: Annotate.hs  Cabal.hs  Class.hs  Config.hs  Module.hs  PackageInterface.hs
fficxx/src/FFICXX/Generate/Util/: C.hs  DepGraph.hs  GHCExactPrint.hs  HaskellSrcExts.hs
fficxx/template/: Class.hs-boot.st  FFI.hsc.st  Implementation.hs.st  Interface.hs.st  Pkg.cabal.st  PkgType.h.st  RawType.hs.st  functionbody.cpp.st  module.hs.st
fficxx/test/: Gen.hs  TestSpec.hs  test-foo.hs
fficxx/test/Test/FFICXX/: IDLSpec.hs
fficxx/trash/: ExistentialEach.hs.st  Instances.hs  Paths_fficxx.hs  classdef.cpp.st  funcdecl.h.st
lib/: FFIC.hs
lib/trash/: ROOTAnnotatesmall.hs  ROOTModule.hs  ROOTModulesmall.hs  ROOTsmall.hs
nix/: pinnedNixpkgs.nix
old/: README.md
old/docs/: TODO.md
old/test/: shell.nix
sample/STL-generator/: README.md  stub.cc
sample/cxxlib/: build.sh
src/: CType.hs  Class.hs  CppCode.hs  FFI.hs  FileGeneration.hs  Function.hs  HROOT-generate.hs  HsCode.hs  ROOT.hs  Templates.hs  Util.hs
stdcxx-gen/: Gen.hs  default.nix  default0.nix  gen.nix
template/: Cast.hs.st  Class.hs.st  Existential.hs.st  ExistentialEach.hs.st  FFI.hsc.st  Function.hsc.st  HROOT.cabal.st  HROOT.cpp.st  HROOT.h.st  HROOTType.h.st  Implementation.hs.st  Interface.hs.st  Module.h.st  Pkg.cabal.st  Pkg.cpp.st  Pkg.h.st  Pkg.hs.st  PkgType.h.st  RawType.hs.st  Type.hs.st  TypeCast.hs  cast.hs.st  declaration.h.st  declbody.h.st  definition.cpp.st  function.cpp.st  module.hs.st
test/: README.md  test.hs  test1.hs  testffic.hs
trash/: .travis.yml  builddep.sh
workspace/: build.sh  build_dep.sh  build_short.sh  build_short2.sh  build_template.sh  build_tmf.sh  cabal.project  function  inherit  map  proxy  shared_ptr  template-member  unique_ptr  vector
workspace0/: cabal.project
workspace2/: build.sh  cabal.project
(+146 files in other folders)
