Name:		HROOT-generate
Version:	0.5.0.999
Synopsis:	automatic HROOT binding generation
Description: 	automatic HROOT binding generation 
License: 	LGPL-2.1
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
Data-files: template/*.h.st
            template/*.hs.st
            template/*.hsc.st
            template/*.cpp.st

Executable HROOT-generate
  Main-is: HROOT-generate.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, containers, filepath>1, directory, process, 
                 HStringTemplate, HSH, safe, strict, filemanip,   
                 parsec>3, cmdargs


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, containers, filepath>1, directory, process, 
                 HStringTemplate, HSH, safe, strict, filemanip,   
                 parsec>3, cmdargs
  Exposed-Modules: 
                   Text.StringTemplate.Helpers
                   HEP.Parser.Config
                   HROOT.Generate.CType
                   HROOT.Generate.Util
                   HROOT.Generate.Templates
                   HROOT.Generate.Function
                   HROOT.Generate.FuncDef
                   HROOT.Generate.Class
                   HROOT.Generate.ROOT
                   HROOT.Generate.CppCode
                   HROOT.Generate.FFI
                   HROOT.Generate.HsCode
                   HROOT.Generate.FileGeneration
                   HROOT.Generate.CommandType

