Name:		HROOT-generate
Version:	0.6.1.999
Synopsis:	automatic HROOT binding generation
Description: 	automatic HROOT binding generation 
License: 	LGPL-2.1
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Data-files: template/*.h.st
            template/*.hs.st
            template/*.hsc.st
            template/*.cpp.st

Executable HROOT-generate
  Main-is: HROOT-generate.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, containers, filepath>1, directory, process, 
                 HStringTemplate, HSH, safe, strict, filemanip,   
                 parsec>3, cmdargs


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, containers, filepath>1, directory, process, 
                 HStringTemplate, HSH, safe, strict, filemanip,   
                 parsec>3, cmdargs
  Exposed-Modules: 
                   Text.StringTemplate.Helpers
                   HEP.Parser.Config

                   HROOT.Generate.Type.CType
                   HROOT.Generate.Type.Class
                   HROOT.Generate.Type.Method
                   HROOT.Generate.Code.MethodDef
                   HROOT.Generate.Code.Cpp
                   HROOT.Generate.Code.HsFrontEnd
                   HROOT.Generate.Code.HsFFI
--                    HROOT.Generate.Generator.Templates
                   HROOT.Generate.Generator.Command
                   HROOT.Generate.Generator.Driver
                   HROOT.Generate.Util
                   HROOT.Generate.ROOT






