Name:		fficxx
Version:	0.0.999
Synopsis:	automatic C++ binding generation
Description: 	automatic C++ binding generation 
License:        GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Data-files: template/*.h.st
            template/*.hs.st
            template/*.hsc.st
            template/*.cpp.st
            template/Pkg.cabal.st


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 mtl>2, 
                 containers, 
                 filepath>1, 
                 directory, 
                 HStringTemplate, 
                 split,
                 process,
                 transformers >= 0.3, 
                 template-haskell,  
                 hashable,
                 unordered-containers,
                 lens > 3,
                 either, 
                 errors,  
                 Cabal 

  Exposed-Modules: 
                   -- Bindings.Cxx.Generate.Type.CType
                   Bindings.Cxx.Generate.Type.Class
                   -- Bindings.Cxx.Generate.Type.Method
                   Bindings.Cxx.Generate.Type.Module
                   Bindings.Cxx.Generate.Type.PackageInterface
                   Bindings.Cxx.Generate.Config
                   Bindings.Cxx.Generate.Code.MethodDef
                   Bindings.Cxx.Generate.Code.Cpp
                   Bindings.Cxx.Generate.Code.HsFrontEnd
                   Bindings.Cxx.Generate.Code.HsFFI
                   Bindings.Cxx.Generate.Code.Cabal
                   Bindings.Cxx.Generate.Code.Dependency
                   Bindings.Cxx.Generate.Generator.Driver
                   Bindings.Cxx.Generate.Generator.ContentMaker
                   Bindings.Cxx.Generate.Util
                   Bindings.Cxx.Generate.QQ.Verbatim
                   Bindings.Cxx.Generate.Type.Annotate
                   Bindings.Cxx.Runtime.Cast
                   Paths_fficxx

