Name:		fficxx
Version:	0.2
Synopsis:	automatic C++ binding generation
Description: 	automatic C++ binding generation 
License:        BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Category:       FFI Tools
Cabal-Version:  >= 1.8
Data-files: template/*.h.st
            template/*.hs.st
            template/*.hsc.st
            template/*.hs-boot.st
            template/*.cpp.st
            template/Pkg.cabal.st
            sample/cxxlib/build.sh
            sample/cxxlib/include/*.h
            sample/cxxlib/src/*.cpp
            sample/cxxlib/src/Makefile
            sample/mysample-generator/MySampleGen.hs
            sample/mysample-generator/use_mysample.hs
            sample/snappy-generator/SnappyGen.hs


Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.* , 
                 mtl>2, 
                 containers, 
                 filepath>1, 
                 directory, 
                 HStringTemplate, 
                 split,
                 process,
                 transformers >= 0.3, 
                 template-haskell,  
                 hashable,
                 unordered-containers,
                 lens > 3,
                 either, 
                 errors,
                 bytestring,
                 pureMD5,  
                 Cabal

  Exposed-Modules: 
                   FFICXX.Generate.Builder 
                   FFICXX.Generate.Type.Class
                   FFICXX.Generate.Type.Module
                   FFICXX.Generate.Type.PackageInterface
                   FFICXX.Generate.Config
                   FFICXX.Generate.Code.MethodDef
                   FFICXX.Generate.Code.Cpp
                   FFICXX.Generate.Code.HsFrontEnd
                   FFICXX.Generate.Code.HsFFI
                   FFICXX.Generate.Code.Cabal
                   FFICXX.Generate.Code.Dependency
                   FFICXX.Generate.Generator.Driver
                   FFICXX.Generate.Generator.ContentMaker
                   FFICXX.Generate.Util
                   FFICXX.Generate.QQ.Verbatim
                   FFICXX.Generate.Type.Annotate
                   FFICXX.Paths_fficxx
  Other-Modules:
                   Paths_fficxx

