Name:		xsec
Version:	0.1.0.1
Synopsis:	cross section calculator for ttbar
Description: 	cross section calculator for ttbar production physics 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Executable xsec
  Main-is: xsec.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, ttbar>=0.0.2, LHAPDF-haskell, HEPUtil > 0.0.3, mersenne-random > 1, array, 
                 HEPMonteCarlo >= 0.1, HROOT >= 0.2, attoparsec > 0.8, bytestring > 0.9, 
                 bytestring-lexing, unix > 2, madgraph-auto > 0.3, directory, process, tagsoup

Library
  hs-source-dirs: src
  Exposed-Modules: 
                   XSec,
                   Banner,
                   ParseDouble,
                   PythiaLog, 
                   Tester.XSecTester, 
                   Tester.XSecTester.Common, 
                   Tester.XSecTester.Parton, 
                   Tester.XSecTester.Proton
		 
