Name:           fficxx-runtime
Version:        0.6
Synopsis:       Runtime for fficxx-generated library
Description:    Runtime for fficxx-generated library.
                fficxx is an automatic haskell Foreign Function Interface (FFI) generator to C++.
License:        BSD3
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Category:       FFI Tools
Cabal-Version:  >= 1.10
Data-files:

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx-runtime

Library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:  -Wall -funbox-strict-fields -fno-warn-unused-do-bind
  Build-Depends:
                 base == 4.*,
                 bytestring,
                 hashable,
                 template-haskell

  Exposed-Modules:
                   FFICXX.Runtime.Cast
                   FFICXX.Runtime.CodeGen.Cxx
                   FFICXX.Runtime.Function.Template
                   FFICXX.Runtime.Function.TH
                   FFICXX.Runtime.TH


  Include-dirs:    csrc
  Install-includes: MacroPatternMatch.h
                    Function.h
                    cpp_magic.h
