Cabal-Version:  3.0
Name:           fficxx-runtime
Version:        0.7.0.1
Synopsis:       Runtime for fficxx-generated library
Description:    Runtime for fficxx-generated library.
                fficxx is an automatic haskell Foreign Function Interface (FFI) generator to C++.
License:        BSD-2-Clause
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Tested-With:    GHC == 9.0.2 || == 9.2.4 || == 9.4.2
Category:       FFI Tools
Extra-Source-Files:
  ChangeLog.md

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx-runtime

Library
  hs-source-dirs: src
  default-language: Haskell2010
  Build-Depends:
                 base == 4.*,
                 bytestring,
                 template-haskell
  Exposed-Modules:
                   FFICXX.Runtime.Cast
                   FFICXX.Runtime.CodeGen.Cxx
                   FFICXX.Runtime.Function.Template
                   FFICXX.Runtime.Function.TH
                   FFICXX.Runtime.TH


  Include-dirs:    csrc
  Install-includes: MacroPatternMatch.h
                    Function.h
                    cpp_magic.h
  ghc-options: -Wall
               -funbox-strict-fields
               -fno-warn-unused-do-bind
