Cabal-Version:  3.0
Name:           fficxx-test
Version:        0.7.0.0
Synopsis:       test for fficxx
Description:    test for fficxx (with stdcxx)
License:        BSD-2-Clause
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Category:       FFI Tools

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

executable dummy-binary
  main-is:       Main.hs
  other-modules:
  build-depends: base
  hs-source-dirs: app

test-suite hspec
  type:          exitcode-stdio-1.0
  main-is:       Main.hs
  other-modules: FunctionSpec
                 MapSpec
                 PairSpec
                 SharedPtrSpec
                 UniquePtrSpec
                 VectorSpec
  build-depends: async
               , base
               , bytestring
               , directory
               , fficxx
               , fficxx-runtime
               , filepath
               , hspec
               , silently
               , stdcxx
               , unordered-containers
  hs-source-dirs: test
