Name:           fficxx
Version:        0.6.999
Synopsis:       Automatic C++ binding generation
Description:    fficxx is an automatic haskell Foreign Function Interface (FFI) generator to C++.
License:        BSD3
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Category:       FFI Tools
Cabal-Version:  >= 1.10

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

Library
  hs-source-dirs: src
  default-language: Haskell2010
  Build-Depends: base == 4.*
               , aeson
               , aeson-pretty
               , bytestring
               , Cabal
               , containers
               , data-default
               , directory
               , errors
               , fficxx-runtime
               , filepath>1
               , hashable
               , haskell-src-exts >= 1.22
               , lens > 3
               , attoparsec
               , mtl>2
               , process
               , pureMD5
               , split
               , transformers >= 0.3
               , template
               , template-haskell
               , text
               , unordered-containers
  Exposed-Modules:
               FFICXX.Generate.Builder
               FFICXX.Generate.Config
               FFICXX.Generate.Code.Cpp
               FFICXX.Generate.Code.HsCast
               FFICXX.Generate.Code.HsFFI
               FFICXX.Generate.Code.HsFrontEnd
               FFICXX.Generate.Code.HsProxy
               FFICXX.Generate.Code.HsTemplate
               FFICXX.Generate.Code.Cabal
               FFICXX.Generate.Code.Primitive
               FFICXX.Generate.ContentMaker
               FFICXX.Generate.Dependency
               FFICXX.Generate.IDL.Parser
               FFICXX.Generate.IDL.Translate
               FFICXX.Generate.IDL.Type
               FFICXX.Generate.Name
               FFICXX.Generate.QQ.Verbatim
               FFICXX.Generate.Util
               FFICXX.Generate.Util.HaskellSrcExts
               FFICXX.Generate.Type.Annotate
               FFICXX.Generate.Type.Cabal
               FFICXX.Generate.Type.Config
               FFICXX.Generate.Type.Class
               FFICXX.Generate.Type.Module
               FFICXX.Generate.Type.PackageInterface
  ghc-options: -Wall
               -Werror
               -funbox-strict-fields
               -fno-warn-unused-do-bind
               -fno-warn-missing-signatures

executable test
    main-is:          test.hs
    build-depends:    attoparsec,
                      base,
                      fficxx,
                      pretty-simple,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
