Cabal-Version:  3.0
Name:           fficxx
Version:        0.7.0.1
Synopsis:       Automatic C++ binding generation
Description:    fficxx is an automatic haskell Foreign Function Interface (FFI) generator to C++.
License:        BSD-2-Clause
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Tested-With:    GHC == 9.0.2 || == 9.2.4 || == 9.4.2
Category:       FFI Tools
Extra-Source-Files:
  ChangeLog.md

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

Library
  hs-source-dirs: src
  default-language: Haskell2010
  Build-Depends: base == 4.*
               , aeson
               , aeson-pretty
               , array
               , bytestring
               , Cabal
               , containers
               , data-default
               , directory
               , dotgen
               , errors
               , fficxx-runtime
               , filepath>1
               , hashable
               , haskell-src-exts >= 1.22
               , lens > 3
               , mtl>2
               , process
               , pureMD5
               , split
               , transformers >= 0.3
               , template
               , template-haskell
               , text
               , unordered-containers
  Exposed-Modules:
               FFICXX.Generate.Builder
               FFICXX.Generate.Config
               FFICXX.Generate.Code.Cpp
               FFICXX.Generate.Code.HsCast
               FFICXX.Generate.Code.HsFFI
               FFICXX.Generate.Code.HsFrontEnd
               FFICXX.Generate.Code.HsProxy
               FFICXX.Generate.Code.HsTemplate
               FFICXX.Generate.Code.Cabal
               FFICXX.Generate.Code.Primitive
               FFICXX.Generate.ContentMaker
               FFICXX.Generate.Dependency
               FFICXX.Generate.Dependency.Graph
               FFICXX.Generate.Name
               FFICXX.Generate.QQ.Verbatim
               FFICXX.Generate.Util
               FFICXX.Generate.Util.DepGraph
               FFICXX.Generate.Util.HaskellSrcExts
               FFICXX.Generate.Type.Annotate
               FFICXX.Generate.Type.Cabal
               FFICXX.Generate.Type.Config
               FFICXX.Generate.Type.Class
               FFICXX.Generate.Type.Module
               FFICXX.Generate.Type.PackageInterface
  ghc-options: -Wall
               -funbox-strict-fields
               -fno-warn-unused-do-bind
               -fno-warn-missing-signatures
