Name:           tmpl-dup-inst
Version:        0.0
Synopsis:       test for fficxx template instatiation duplication
Description:    test for fficxx template instatiation duplication
License:        BSD3
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Category:       FFI Tools
Cabal-Version:  >= 1.8

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

Library
  hs-source-dirs: src
  Build-Depends: base == 4.*
               , stdcxx
  Exposed-Modules:
               Test.TemplateInstantiation.A
               Test.TemplateInstantiation.B
  ghc-options: -Wall
               -funbox-strict-fields
               -fno-warn-unused-do-bind
               -fno-warn-missing-signatures
               -O0
