Cabal-Version:  3.0
Name:           tmpl-dup-inst
Version:        0.0
Synopsis:       test for fficxx template instatiation duplication
Description:    test for fficxx template instatiation duplication
License:        BSD-2-Clause
License-file:   LICENSE
Author:         Ian-Woo Kim
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
Category:       FFI Tools

Source-repository head
  type: git
  location: http://www.github.com/wavewave/fficxx

Library
  hs-source-dirs: src
  Build-Depends: base == 4.*
               , fficxx-runtime
               , stdcxx
  Exposed-Modules:
               Test.TemplateInstantiation.A
               Test.TemplateInstantiation.B
  ghc-options: -Wall
               -funbox-strict-fields
               -fno-warn-unused-do-bind
               -fno-warn-missing-signatures
               -O0
               -keep-tmp-files